welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:30: error: ')' expected but 'for' found.
			for(j<- 0 to taille - 2){
                        ^